[package]
name = "coffee-shop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
actix-web = { version = "4.0.0-beta.10" }
actix-cors = "0.6.0-beta.8"
serde-aux = "3.0.1"
once_cell = "1.9.0"
config = { version = "0.11", default-features = false, features = ["yaml"] }
actix-rt = "2.2.0"
futures = { version = "0.3", default-features = false }
futures-channel = "0.3.19"
futures-util = "0.3.19"
tungstenite = "0.16.0"
tokio-tungstenite = "0.16.1"
tokio-stream = { version = "0.1.8", features = ["sync"] }
async-trait = "0.1.52"

[dev-dependencies]
mocktopus = "0.7.11"
